# miniweb

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  todo.md
res/: 404.html  hello.html  index.html
src/: CMakeLists.txt  connection.h  connection_manager.c  connection_manager.h  hash.c  hash.h  http_helpers.c  http_helpers.h  http_parser.h  itc_queue.c  itc_queue.h  logging.h  macro_helpers.h  main.c  miniweb_response.c  miniweb_response.h  pool.c  pool.h  router.c  router.h  server.c  server.h  thread_pool.c  thread_pool.h
test/: CMakeLists.txt  hash.t.c  hash.t.h  main.t.c  pool.t.c  pool.t.h  router.t.c  router.t.h  thread_pool.t.c  thread_pool.t.h
